# rift

./: .env.example  .gitignore  README.md  config.json  hbp_experiment.py  prevalence_experiment.py  pyproject.toml  run.py  sample_rubrics.jsonl  sanity_check.py
notebooks/: healthbench_professional_analysis.ipynb  prevalence_analysis.ipynb
rift/: __init__.py  classifier.py  prompts.py  schema.py  signals.py  taxonomy.py
rift/data/: loaders.py
